--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
+# The credentials are for the Azure Cosmos DB
+MONGODB_URI="<mongodb-connection-string>"
+MONGODB_DB_NAME="<database-name>"
+
+# JWT secret. Generate this with a random secret generator
+JWT_SECRET=<your-jwt-secret>
+
 # Environment
 # For local development:
 # ENVIRONMENT=development
@@ -6,13 +13,47 @@
 
 ENVIRONMENT=<development-or-production>
 
-# Cookie domain. Ex. localhost, etc. without https:// prefix
 COOKIE_DOMAIN=<cookie-domain>
 
-# API Domain. Ex. localhost, etc. without https:// prefix
+# API Domain
 API_DOMAIN=<domain-name>
 
 # Frontend domain (needed for CORS)
 # For local development:
 # FRONTEND_URL=https://localhost:3000/
 FRONTEND_URL=<frontend-url>
+
+# Azure creds
+AZURE_CLIENT_ID=<client-id>
+AZURE_TENANT_ID=<tenant-id>
+AZURE_CLIENT_SECRET=<client-secret>
+AZURE_SUBSCRIPTION_ID=<subscription-id>
+
+# Azure resources configuration
+AZURE_AI_PROJECT_NAME=<name-of-azure-ai-foundry-project-resource>
+AZURE_RG_NAME=<resource-group-name>
+AZURE_AI_ENDPOINT=<azure-openai-endpoint>
+AZURE_LANGUAGE_API_KEY=<azure-language-api-key>
+AZURE_LANGUAGE_ENDPOINT=<azure-language-endpoint>
+
+#Azure OpenAI creds
+AZURE_OPENAI_ENDPOINT=<azure-openai-endpoint-url>
+AZURE_OPENAI_API_KEY=<azure-openai-api-key>
+AZURE_OPENAI_DEPLOYMENT=<azure-openai-deployment-name>
+AZURE_OPENAI_API_VERSION=<azure-openai-model-api-version>
+AZURE_OPENAI_MODEL=<azure-openai-model-name>
+
+# Azure speech to text configuration
+AZURE_STT_ENDPOINT=<speech-to-text-endpoint>
+AZURE_STT_KEY=<speech-to-text-key>
+AZURE_STT_REGION=<speech-to-text-region-code>
+
+# Upload directory
+TMP_UPLOAD_DIR=<directory-path>
+
+# Azure blob storage
+UPLOADS_CONTAINER=<container-name>
+ST_CONNECTION_STRING=<connection-string>
+
+# Anonymous usage
+ANONYMOUS_USER_ID=<mongo-object-id>
