[fix]: imports in services for uploads and processing

--- a/.env.sample
+++ b/.env.sample
@@ -23,6 +23,18 @@ API_DOMAIN=<domain-name>
 # FRONTEND_URL=https://localhost:3000/
 FRONTEND_URL=<frontend-url>
 
+# Knowledge base and RAG
+KNOWLEDGE_BASE_ENDPOINT=<container-url>
+UPLOADS_ENDPOINT=<container-url>
+AZURE_STORAGE_ACCOUNT_CONNECTION_STRING=<connection-string>
+KB_CONTAINER_NAME=<knowledge-base-container-name>
+UPLOADS_CONTAINER_NAME=<uploads-container-name>
+AI_SEARCH_ENDPOINT=<ai-search-endpoint-url>
+AI_SEARCH_API_KEY=<api-key>
+AI_SEARCH_INDEX_NAME=<index-name>
+DOCUMENT_INTELLIGENCE_ENDPOINT=<endpoint-url>
+DOCUMENT_INTELLIGENCE_KEY=<key-for-azure-document-intelligence>
+
 # Azure creds
 AZURE_CLIENT_ID=<client-id>
 AZURE_TENANT_ID=<tenant-id>
@@ -45,3 +57,4 @@ AZURE_OPENAI_MODEL=<azure-openai-model-name>
 
 # Anonymous usage
 ANONYMOUS_USER_ID=<mongo-object-id>
+
