--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ azure-ai-formrecognizer = "^3.3.3"
 python-multipart = "^0.0.20"
 ffmpeg-python = "^0.2.0"
 azure-search-documents = "^11.5.2"
+azure-search = "^1.0.0b2"
 
 
 [build-system]
