--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ python-multipart = "^0.0.20"
 ffmpeg-python = "^0.2.0"
 azure-search-documents = "^11.5.2"
 azure-search = "^1.0.0b2"
+geopandas = "^1.1.0"
+geopy = "^2.4.1"
+tenacity = "^9.1.2"
 
 
 [build-system]
