[chore]: indicate API key in OpenCage

--- a/.env.sample
+++ b/.env.sample
@@ -58,4 +58,4 @@ AZURE_OPENAI_MODEL=<azure-openai-model-name>
 # Anonymous usage
 ANONYMOUS_USER_ID=<mongo-object-id>
 
-OPENCAGE_API_KEY=
+OPENCAGE_API_KEY=<api-key>
